--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --baseColor: #8b54b7;
+}
+
 /* Main CSS */
 main {
     height: 100vh;
@@ -28,7 +32,7 @@ main {
             .img-wrapper {
                 display: inline-block;
                 border-radius: 50%;
-                border: 4px solid white;
+                border: 4px solid var(--baseColor);
                 padding: 0;
                 overflow: hidden;
                 width: 108px; 
@@ -65,8 +69,30 @@ main {
                 font: italic 1em 'Raleway', sans-serif;
 
                 span {
-                    color: #ad7cd4;
+                    color: var(--baseColor);
                 }
+            }
+        }
+
+        /* SOCIAL CONTENT CSS */
+        .social-content {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+
+            .social-button {
+                width: 200px;
+                margin: 10px;
+                gap: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: space-around;
+                padding: 10px 20px;
+                border-radius: 25px;
+                background-color: var(--baseColor);
+                transition: all 200ms ease-in-out;
+                border: 2px solid transparent;
             }
         }
     }
@@ -86,6 +112,27 @@ main {
         .title-content {
             p {
                 font: italic 1.15em 'Raleway', sans-serif!important;
+            }
+        }
+
+        .social-content {
+            .social-button {
+                border-radius: 75px!important;
+                width: 250px!important;
+                justify-content: space-around!important;
+                padding: 8px 16px!important;
+                
+                p:first-child {
+                    font-size: 1.5em;
+                }
+                p:last-child {
+                    font-size: 1.1em;
+                }
+            }
+
+            .social-button:hover {
+                background-color: #462e5a;
+                border: 2px solid #8b54b7
             }
         }
     }
